--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -5,13 +5,8 @@
 }  
  * {
      text-align: center; 
-     color:indigo;
-     background-color: #EDECE5:
-     width: 800px; 
-     margin: auto;
-     padding-top: 30px;
-     color: #2E475D;
-       
+     color:white;
+     background-color:white ;  
     }
 h1, h2 {
     text-align: center;
